# Chip8

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.org  go.mod  main.c  main.cpp
c++/: Makefile  main.cpp
c++/common/: Common.hpp
c++/gui/: GUI.cpp  GUI.hpp
c++/gui/subwins/: ASubwin.cpp  ASubwin.hpp  Game.hpp  Menu.hpp  Stats.cpp  Stats.hpp
c++/gui/utils/: Exception.hpp  Magic.hpp  Rect.hpp  Text.hpp
c++/interpreter/: Interpreter.hpp  Regs.hpp  Stack.hpp
c++/src/: Chip8.cpp  Chip8.hpp  main.cpp
include/: instructions.h  interpreter.h
instructions/: equality.c  flow.c  math_logic.c
src/: CMakeLists.txt  Chip8.cpp  Chip8.hpp  Types.hpp  c8.hpp  chip8.c  drawScreen.c  dumpChip8.c  initChip8.c  instructions.c  runChip8.c
src/c8vm/: Chip8.hpp  Regs.hpp  Screen.hpp  VM.hpp  main.cpp
src/gui/: Screen.cpp  Screen.hpp  Window.cpp  Window.hpp
src/interpreter/: Const.hpp  Memory.cpp  Memory.hpp  Regs.cpp  Regs.hpp  Stack.cpp  Stack.hpp  Timers.cpp  Timers.hpp
vm/: Chip8.cpp  Chip8.hpp  Regs.hpp  main.cpp
